<resources>
    <string name="app_name">ROAD</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personas">Personas:</string>
    <string name="partida">Partida:</string>
    <string name="precio">Precio:</string>
    <string name="estancia">Estancia:</string>
    <string name="button">VER VIAJE</string>
    <string name="image_that_explains_road">Image that explains ROAD</string>
    <string name="money_l">$$$$</string>
    <string name="_123">123</string>
    <string name="_4_dias">4 dias</string>
    <string name="_11_de_diciembre">11 de diciembre</string>
    <string name="viaje_a_xxxxx">Viaje a XXXXX</string>
    <string name="explorar">Explorar</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="searchheader">searchheader</string>
    <string name="logoroad">LogoROAD</string>
</resources>